# orocos-yarp-transport

./: .gitignore  CMakeLists.txt  README  YarpChannelElement.hpp  YarpTemplateProtocol.hpp  YarpTransport.cpp  YarpTransport.hpp  manifest.xml  orocos-rtt-yarp.pc.in  orocos-yarp-transport.pc.in  yarp_bottle_archive.hpp
doc/: yarp-transport-doc.xml
service/: Yarp-service.cpp
testing/: Foo.hpp  FooTest.cpp  helloworld_A.xml  helloworld_B.xml  helloworld_yarp.xml  test.ops
transport/: YarpChannelElement.hpp  YarpTemplateProtocol.hpp  YarpTransport.cpp  YarpTransport.hpp  yarp_bottle_archive.hpp
